K8S/billing-deployment.yaml
### eshop api
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: billing
  template:
    metadata:
      labels:
        app: billing
    spec:
      containers:
      - name: billingservice
        image: alexcei88/otushomeworkbillingservice
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"          
        ports:
          - containerPort: 5010
        volumeMounts:
          - name: config-volume
            mountPath: /app/config          
        livenessProbe:
          httpGet:
            port: 80
            path: /health
          initialDelaySeconds: 2
          periodSeconds: 5
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            port: 80
            path: /api/service/health
          initialDelaySeconds: 1
          periodSeconds: 5
          timeoutSeconds: 1
      volumes:
      - name: config-volume
        configMap:
          name: homework-config
