K8S/delivery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: delivery
  template:
    metadata:
      labels:
        app: delivery
    spec:
      containers:
      - name: deliveryservice
        image: alexcei88/otushomeworkdeliveryservice
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"          
        ports:
          - containerPort: 5040
        volumeMounts:
          - name: config-volume
            mountPath: /app/config          
        livenessProbe:
          httpGet:
            port: 5040
            path: /api/service/health
          initialDelaySeconds: 2
          periodSeconds: 5
          timeoutSeconds: 1
      volumes:
      - name: config-volume
        configMap:
          name: homework-config
