K8S/eshop-deployment.yaml
### eshop api
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eshopservice
  template:
    metadata:
      labels:
        app: eshopservice
    spec:
      containers:
      - name: eshopservice
        image: alexcei88/otushomeworkeshop
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"          
        ports:
          - containerPort: 5020
        volumeMounts:
          - name: config-volume
            mountPath: /app/config          
        livenessProbe:
          httpGet:
            port: 5020
            path: /health
          initialDelaySeconds: 2
          periodSeconds: 5
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            port: 5020
            path: /api/service/health
          initialDelaySeconds: 1
          periodSeconds: 5
          timeoutSeconds: 1
      volumes:
      - name: config-volume
        configMap:
          name: homework-config
