K8S/notification-deployment.yaml
### eshop api
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
      - name: notificationservice
        image: alexcei88/otushomeworknotificationservice
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"          
        ports:
          - containerPort: 5030
        volumeMounts:
          - name: config-volume
            mountPath: /app/config          
        livenessProbe:
          httpGet:
            port: 5030
            path: /api/service/health
          initialDelaySeconds: 2
          periodSeconds: 5
          timeoutSeconds: 1
      volumes:
      - name: config-volume
        configMap:
          name: homework-config
