K8S/payment-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentgateway-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: paymentgateway
  template:
    metadata:
      labels:
        app: paymentgateway
    spec:
      containers:
      - name: paymentgatewayservice
        image: alexcei88/otushomeworkpaymentgatewayservice
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"          
        ports:
          - containerPort: 5010
        volumeMounts:
          - name: config-volume
            mountPath: /app/config          
        livenessProbe:
          httpGet:
            port: 5010
            path: /api/service/health
          initialDelaySeconds: 2
          periodSeconds: 5
          timeoutSeconds: 1
      volumes:
      - name: config-volume
        configMap:
          name: homework-config
