K8S/pricing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricing-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pricing
  template:
    metadata:
      labels:
        app: pricing
    spec:
      containers:
      - name: pricingservice
        image: alexcei88/otushomeworkpricingservice
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"          
        ports:
          - containerPort: 5070
        volumeMounts:
          - name: config-volume
            mountPath: /app/config          
        livenessProbe:
          httpGet:
            port: 5070
            path: /api/service/health
          initialDelaySeconds: 2
          periodSeconds: 5
          timeoutSeconds: 1
      volumes:
      - name: config-volume
        configMap:
          name: homework-config
