K8S/warehouse-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warehouse-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: warehouse
  template:
    metadata:
      labels:
        app: warehouse
    spec:
      containers:
      - name: warehouseservice
        image: alexcei88/otushomeworkwarehouseservice
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"          
        ports:
          - containerPort: 5050
        volumeMounts:
          - name: config-volume
            mountPath: /app/config          
        livenessProbe:
          httpGet:
            port: 5050
            path: /api/service/health
          initialDelaySeconds: 2
          periodSeconds: 5
          timeoutSeconds: 1
      volumes:
      - name: config-volume
        configMap:
          name: homework-config
