K8S/delivery-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
  labels:
    app: delivery
spec:
  selector:
    app: delivery
  ports:
  - port: 15040
    targetPort: 5040  
    name: "delivery-service"
  type: NodePort
