K8S/eshop-service.yaml
### rest api
apiVersion: v1
kind: Service
metadata:
  name: eshop-service
  labels:
    app: eshopservice
spec:
  selector:
    app: eshopservice
  ports:
  - port: 15020
    targetPort: 5020  
    name: "eshop-service"
  type: NodePort
