K8S/notification-service.yaml
### billing service
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  labels:
    app: notification
spec:
  selector:
    app: notification
  ports:
  - port: 15030
    targetPort: 5030  
    name: "notification-service"
  type: NodePort
