K8S/payment-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paymentgateway-service
  labels:
    app: paymentgateway
spec:
  selector:
    app: paymentgateway
  ports:
  - port: 15010
    targetPort: 5010  
    name: "paymentgateway-service"
  type: NodePort
