K8S/pricing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pricing-service
  labels:
    app: pricing
spec:
  selector:
    app: pricing
  ports:
  - port: 15070
    targetPort: 5070
    name: "pricing-service"
  type: NodePort
