K8S/service.yaml
### rest api
apiVersion: v1
kind: Service
metadata:
  name: homework-service
  labels:
    app: homeworkapp
spec:
  selector:
    app: homeworkapp
  ports:
  - port: 15020
    targetPort: 5020  
    name: "homework-service"
  type: NodePort
