K8S/warehouse-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: warehouse-service
  labels:
    app: warehouse
spec:
  selector:
    app: warehouse
  ports:
  - port: 15050
    targetPort: 5050  
    name: "warehouse-service"
  type: NodePort
