K8S/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-ingress
  labels:
      name: homework-ingress
      app: homeworkapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-url: http://homeworkapp-authservice.default.svc.cluster.local:16000/api/login
    nginx.ingress.kubernetes.io/auth-response-headers: "X-Custom-Authentification"
    nginx.ingress.kubernetes.io/configuration-snippet: |
          proxy_set_header       Authorization "";
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - pathType: Prefix
        path: /eshop/(.*)
        backend:
          service:
            name: homework-service
            port:
              number: 15020
      - pathType: Prefix
        path: /billing/(.*)
        backend:
          service:
            name: billing-service
            port:
              number: 15010
      - pathType: Prefix
        path: /notification/(.*)
        backend:
          service:
            name: notification-service
            port:
              number: 15030
