K8S/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeworkapp-ingress-authservice
  labels:
      name: homeworkapp-ingress-authservice
      app: homeworkapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - pathType: Prefix
        path: /auth/(.*)
        backend:
          service:
            name: homeworkapp-authservice
            port:
              number: 16000
