K8S/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-ingress
  labels:
      name: homework-ingress
      app: homeworkapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - pathType: Prefix
        path: /otus(\/\S+?\/)(.*)
        backend:
          service:
            name: homework-service
            port:
              number: 15000
